@@ -6,7 +6,7 @@ parts = test
 recipe = zc.recipe.testrunner
 environment = test-environment
 eggs =
-   z3c.pt [lxml]
+   z3c.ptcompat [test]
 
 [test-environment]
 PREFER_Z3C_PT = True
