@@ -11,7 +11,7 @@ OPTIONFLAGS = (doctest.ELLIPSIS |
 import zope.component.testing
 import zope.configuration.xmlconfig
 
-import z3c.pt.compat
+import z3c.ptcompat
 
 class TestParticipation(object):
     principal = 'foobar'
@@ -19,15 +19,15 @@ class TestParticipation(object):
 
 def setUp(test):
     zope.component.testing.setUp(test)
-    zope.configuration.xmlconfig.XMLConfig('meta.zcml', z3c.pt.compat)()
+    zope.configuration.xmlconfig.XMLConfig('meta.zcml', z3c.ptcompat)()
     zope.configuration.xmlconfig.XMLConfig('configure.zcml', z3c.pt)()
     
 def tearDown(test):
     zope.component.testing.tearDown(test)
 
 def test_suite():
-    import z3c.pt.compat.tests
-    path = z3c.pt.compat.tests.__path__[0]
+    import z3c.ptcompat.tests
+    path = z3c.ptcompat.tests.__path__[0]
 
     globs = dict(
         os=os,
@@ -42,7 +42,7 @@ def test_suite():
         globs=globs,
         setUp=setUp,
         tearDown=tearDown,
-        package="z3c.pt.compat")])
+        package="z3c.ptcompat")])
 
 if __name__ == '__main__':
     unittest.main(defaultTest='test_suite')
